--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "prettier": "2.8.8",
     "typescript": "5.1.3",
     "typescript-plugin-css-modules": "5.0.1"
+  },
+  "resolutions": {
+    "semver": "7.5.3",
+    "word-wrap": "aashutoshrathi/word-wrap"
   }
 }
